# ValoRe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.vertex  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  valore_pipeline.json
.github/workflows/: ci.yml
dashboard/: .dockerignore  Dockerfile  Home.py  pyproject.toml
dashboard/pages/: 1_Estimate_Price.py  2_Explore_Market.py  3_Model_Insights.py
dashboard/utils/: api.py  config.py  data.py  registry.py
docs/: 03_cloud_setup.md  04_data_storage.md  05_run_instructions.md  DATA.md  DATASET_CARD.md  EXPERIMENTATION.md  README.md  SETUP.md  architecture.md  cloud_initialization.md  data_dictionary.md  dataset_card.md  decisions.md  eda.md  experimentation.md  gcp_config.md
models/: best_params.json  metrics.json  model.joblib  training_summary.csv
notebooks/: eda.ipynb  experimentation.ipynb
projectStatement/: project_instructions.md
src/: README.md  config.py  features.py  inference.py  model.py
src/api/: app.py
src/api/templates/: index.html
src/cloud/: README.md  bigquery_io.py  gcs_io.py
src/modeling/: data_loading.py  evaluation.py  model_selection.py  preprocessing.py  run_training.py  splitting.py  training.py
src/scripts/: README.md  check_bigquery_queries.py  gcs_setup_and_upload.py  load_housing_to_bigquery.py
src/vertex/: data_ingestion.py  evaluation_component.py  preprocessing_component.py  promote_model_component.py  run_pipeline.py  splitting_component.py  training_component.py
templates/: index.html
tests/: README.md  test_api_app.py
tests/load/: locust_api.py  locust_dashboard.py
