[project]
name = "valore"
version = "0.1.0"
description = "ValoRe house price prediction project for ML Systems Design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes",
    "fastapi>=0.135.2",
    "google-auth",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "google-cloud-storage",
    "gunicorn==23.0.0",
    "joblib",
    "numpy",
    "pandas",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
    "xgboost",
]

[dependency-groups]
dev = [
    "jupyter",
    "pre-commit",
    "pytest",
    "ruff",
    "seaborn",
]
