[project]
name = "valore-dashboard"
version = "0.1.0"
description = "ValoRe Streamlit dashboard — King County house price predictor"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.0.0",
    "gcsfs>=2026.5.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-storage>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pyarrow>=14.0.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "xgboost>=3.2.0",
]
